--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-2 skilltitle">guitarist</div>
+                        <div class="col-md-2 skilltitle">photoshop</div>
                         <div class="col-md-8">
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
