--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="da-slide">
                         <h2>CONTENT WRITER</h2>
-                        <p></p>
+                        <p> Content is not about story telling it's telling your story well </p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
@@ -88,10 +88,10 @@
                         <p>A Quick learner with 'Can Do'attitude</p>
                         <div class="da-img"></div>
                     </div>
-				<!--  <nav class="da-arrows">
+				  <nav class="da-arrows">
                         <span class="da-arrows-prev"></span>
                         <span class="da-arrows-next"></span>
-                    </nav> -->
+                    </nav> 
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="text-center">
             <h1>I am a best speaker,with sound mind.</h1>
-              <p></p>
+              <p> Recognize that every interaction you have is an opportunity to make positive impact on others</p>
             </div>
         </div>
 
@@ -134,7 +134,7 @@
                 <div class="col-md-4 text-center tileBox">
                     <div class="txtHead"><i class="fa fa-css3"></i>
                     <h3>Active<span class="id-color">volunteer</span></h3></div>
-                    <p>Good communication, interperson and serviced mind.</p>
+                    <p>Good communication, interperson and service minded.</p>
                 </div>
                 <!-- end: -->
             </div>
