--- a/index.html
+++ b/index.html
@@ -99,8 +99,19 @@
     <section id="introText">
         <div class="container">
             <div class="text-center">
-            <h1>I am a best speaker,with sound mind.</h1>
-              <p> Recognize that every interaction you have is an opportunity to make positive impact on others</p>
+            <h1><b> Experience</b></h1>
+              <h2> 1. Learnogether </h2>
+		    <ul>
+		  <li>  In June 2020 joined Learnogether as an intern for the posting Content Curator, Graphic Designing, and Digital Marketing for three months</li>
+			 <li>  I learnt how to do simultaneous work at a time </li>
+		         <li>  During this Internship I was motivated to learn many things on emerging technologies</li>
+		</ul>
+	      <h2> 2. Global Graduation prvt lmtd </h2>
+		    <ul>
+			    <li> I worked as a campus ambassodor for more than 6 months</li>
+			    <li> I was awarded as a best volunteer for my work</li>
+			    <li> I got an opportunity to host several workshops where I learnt many things about administrating skills, and entrepreneurship skills</li>
+			    </ul>
             </div>
         </div>
 
@@ -110,7 +121,7 @@
         <div class="container">
             <div class="heading text-center">
                 <!-- Heading -->
-                <h2>I am Vidya, content writer</h2>
+                <h2>I am Vidya, Programmer</h2>
                 <p>It seems as though inspiration strikes at the most unlikely times.skill</p>
             </div>
             <div class="row">
