--- a/index.html
+++ b/index.html
@@ -99,19 +99,16 @@
     <section id="introText">
         <div class="container">
             <div class="text-center">
-            <h1><b> Experience</b></h1>
+            <h1><b> Work Experience</b></h1>
               <h2> 1. Learnogether </h2>
-		    <ul>
-		  <li>  In June 2020 joined Learnogether as an intern for the posting Content Curator, Graphic Designing, and Digital Marketing for three months</li>
-			 <li>  I learnt how to do simultaneous work at a time </li>
-		         <li>  During this Internship I was motivated to learn many things on emerging technologies</li>
-		</ul>
-	      <h2> 2. Global Graduation prvt lmtd </h2>
-		    <ul>
-			    <li> I worked as a campus ambassodor for more than 6 months</li>
-			    <li> I was awarded as a best volunteer for my work</li>
-			    <li> I got an opportunity to host several workshops where I learnt many things about administrating skills, and entrepreneurship skills</li>
-			    </ul>
+		  <p> In June 2020 joined Learnogether as an intern for the posting Content Curator, Graphic Designing, and Digital Marketing for three months</p><br>
+			 <p>  I learnt how to do simultaneous work at a time <p><br>
+		         <p>  During this Internship I was motivated to learn many things on emerging technologies<p><br>
+	      <h2> 2. Global Graduation prvt lmtd </h2><br>
+			    <p> I worked as a campus ambassodor for more than 6 months</p><br>
+			    <p> I was awarded as a best volunteer for my work</p><br>
+			    <p> I got an opportunity to host several workshops where I learnt many things about administrating skills, and entrepreneurship skills</p><br>
+			
             </div>
         </div>
 
