--- a/index.html
+++ b/index.html
@@ -97,7 +97,22 @@
         </div>
     </section>
     <section id="introText">
+        
+
+    </section>
+    <!--About-->
+    <section id="aboutUs" class="secPad">
         <div class="container">
+            <div class="heading text-center">
+                <!-- Heading -->
+                <h2>I am Vidya, Programmer</h2>
+                <p>It seems as though inspiration strikes at the most unlikely times.skill</p>
+		    <hr>
+            </div>
+		<div class="image-center">
+			<img class="fit-picture" src="images/imgonline-com-ua-shape-KfS0a4C84FpY.png" alt="mypic" />
+			</div>
+		<div class="container">
             <div class="text-center">
             <h1><b> Work Experience</b></h1>
               <h2> 1. Learnogether </h2>
@@ -111,16 +126,6 @@
 			
             </div>
         </div>
-
-    </section>
-    <!--About-->
-    <section id="aboutUs" class="secPad">
-        <div class="container">
-            <div class="heading text-center">
-                <!-- Heading -->
-                <h2>I am Vidya, Programmer</h2>
-                <p>It seems as though inspiration strikes at the most unlikely times.skill</p>
-            </div>
             <div class="row">
                 <!-- item -->
                 <div class="col-md-4 text-center tileBox">
