--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		    <hr>
             </div>
 		<div class="image-center">
-			<img class="fit-picture" src="images/imgonline-com-ua-shape-KfS0a4C84FpY.png" alt="mypic" />
+			<img src="images/imgonline-com-ua-shape-KfS0a4C84FpY.png" alt="mypic" />
 			</div>
 		<div class="container">
             <div class="text-center">
