--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <p>It seems as though inspiration strikes at the most unlikely times.skill</p>
 		    <hr>
             </div>
-		<div>
+		<div class="image-center">
 			<img src="images/imgonline-com-ua-shape-KfS0a4C84FpY.png" alt="mypic" width="246" height="246">
 			</div>
 		<div class="container">
